--- a/index.html
+++ b/index.html
@@ -678,29 +678,31 @@
 	<ol>
 
 	<li id="fn1">
-	<p>These footnotes will have sources, links, or bonus commentary. Like this commentary!&nbsp;<a href="#fnref1" rev="footnote">&#8617;</a></p>
+	<p>در این پانویس‌ها به بررسی منابع، ارجاعات و توضیحات تکمیلی می‌پردازیم، مثل این توضیح!<a href="#fnref1" rev="footnote">&#8617;</a></p>
 
-	<p><strong>This guide was published on May 1st, 2020.</strong> Many details will become outdated, but we&#39;re confident this guide will cover 95% of possible futures, and that Epidemiology 101 will remain forever useful.</p>
+	<p><strong>این راهنما در تاریخ ۱۲ اردیبهشت ۱۳۹۹ تدوین شده.</strong> برخی از جزئیات ممکنه قدیمی بشن، اما اطمینان داریم که ۹۵٪ آینده‌های ممکن رو پوشش می‌دیم، و مبحث «مقدمه‌ای بر همه‌گیرشناسی» برای همیشه مفید باقی خواهد مان.</p>
+	
+		<p>(به‌روزرسانی ۲۶ اردیبهشت: اضافه کردن منابع برای «۱ نفر از هر ۲۰ نفر راهی بیمارستان می‌شن» و «۰.۵٪ افراد مبتلا فوت می‌کنن»)</p>
 	</li>
 
 	<li id="fn2">
-	<p>“The mean [serial] interval was 3.96 days (95% CI 3.53–4.39 days)”. <a href="https://wwwnc.cdc.gov/eid/article/26/6/20-0357_article">Du Z, Xu X, Wu Y, Wang L, Cowling BJ, Ancel Meyers L</a> (Disclaimer: Early release articles are not considered as final versions)&nbsp;<a href="#fnref2" rev="footnote">&#8617;</a></p>
+	<p>« میانگین بازهٔ زمانی {متوالی} ۳.۹۶ روز خواهد بود (بازهٔ اطمینان ۹۵٪ بین ۳.۵۳ تا ۴.۳۹ روز)» <a href="https://wwwnc.cdc.gov/eid/article/26/6/20-0357_article">Du Z, Xu X, Wu Y, Wang L, Cowling BJ, Ancel Meyers L</a> (سلب مسئولیت: نسخهٔ اولیه مقالات نباید نسخهٔ نهایی آن‌ها تلقی شوند.)&nbsp;<a href="#fnref2" rev="footnote">&#8617;</a></p>
 	</li>
 
 	<li id="fn3">
-	<p><strong>Remember: all these simulations are super simplified, for educational purposes.</strong>&nbsp;<a href="#fnref3" rev="footnote">&#8617;</a></p>
+	<p><strong>یادمون باشه: همهٔ‌ این شبیه‌سازی‌ها برای مقاصد آموزشی هستن و خیلی ساده‌سازی شدن.</strong>&nbsp;<a href="#fnref3" rev="footnote">&#8617;</a></p>
 
-	<p>One simplification: When you tell this simulation &quot;Infect 1 new person every X days&quot;, it&#39;s actually increasing # of infected by 1/X each day. Same for future settings in these simulations – &quot;Recover every X days&quot; is actually reducing # of infected by 1/X each day.</p>
+	<p>یکی از ساده‌سازی‌ها: وقتی در این شبیه‌سازی می‌گید: « ۱ فرد جدید رو هر X روز یک‌بار مبتلا می‌کنه»، در حقیقت تعداد افراد مبتلا هر روز ۱Xافزایش پیدا می‌کنه. برای تنظیمات آینده شبیه‌سازها هم همین برقراره - «هر X روز یک‌بار بهبود پیدا می‌کنه» در حقیقت تعداد افراد مبتلا رو هر روز 1 <sub>X</sub> کاهش می‌ده.</p>
 
-	<p>Those <em>aren&#39;t</em> exactly the same, but it&#39;s close enough, and for educational purposes it&#39;s less opaque than setting the transmission/recovery rates directly.</p>
+	<p>تعریف اصلی و تعریفی که در شبیه‌سازی‌ها وجود داره، <em>دقیقا یکی نیستند</em>، اما به اندازهٔ‌ کافی به هم شبیه‌اند، و برای اهداف آموزشی شیوهٔ استفاده شده ابهام کم‌تری نسبت به دخیل کردن دقیق نرخ انتقال/بهبودی به وجود میاره.</p>
 	</li>
 
 	<li id="fn4">
-	<p>“The median communicable period [...] was 9.5 days.” <a href="https://link.springer.com/article/10.1007/s11427-020-1661-4">Hu, Z., Song, C., Xu, C. et al</a> Yes, we know &quot;median&quot; is not the same as &quot;average&quot;. For simplified educational purposes, close enough.&nbsp;<a href="#fnref4" rev="footnote">&#8617;</a></p>
+	<p>«دورهٔ میانهٔ انتقال {...} ۹.۵ روز بوده» <a href="https://link.springer.com/article/10.1007/s11427-020-1661-4">Hu, Z., Song, C., Xu, C. et al</a> بله، متوجه هستیم «میانه» با میانگین فرق‌داره، اما برای اهداف آموزشی ما، به اندازهٔ کافی به هم نزدیک هستند.&nbsp;<a href="#fnref4" rev="footnote">&#8617;</a></p>
 	</li>
 
 	<li id="fn5">
-	<p>For more technical explanations of the SIR Model, see <a href="https://www.idmod.org/docs/hiv/model-sir.html#">the Institute for Disease Modeling</a> and <a href="https://en.wikipedia.org/wiki/Compartmental_models_in_epidemiology#The_SIR_model">Wikipedia</a>&nbsp;<a href="#fnref5" rev="footnote">&#8617;</a></p>
+	<p>برای دیدن توضیحات فنی بیشتر در مورد مدل SIR، مطالب <a href="https://www.idmod.org/docs/hiv/model-sir.html#">موسسهٔ مدل‌کردن بیماری‌ها </a> و <a href="https://en.wikipedia.org/wiki/Compartmental_models_in_epidemiology#The_SIR_model"> ویکی‌پدیا</a> رو ببینید.&nbsp;<a href="#fnref5" rev="footnote">&#8617;</a></p>
 	</li>
 
 	<li id="fn6">
@@ -910,56 +912,76 @@
 
 	<div>
 		
-		Help this post get its R > 1: <span class='shareables in_footer' style='position: relative; top: 17px; right: -6px;'></span>
-		<br><br>
-		This guide is
+		کمک کنید این پست به R>1 برسه. <span class='shareables in_footer' style='position: relative; top: 17px; right: -6px;'></span>
+		<br>
 		<br>
 		<img src='sharing/cc0.png' style="margin-right: 10px; margin-top: 10px; width: 120px;"/>
 		<b style='font-size: 100px;position: relative;top: -24px;'>
-			PUBLIC DOMAIN
+			مالکیت عمومی
 		</b>
-		That means you <i>already</i> have permission to re-use &amp; remix
-		any of the art/code/words on this page – on blogs, news sites, classrooms, anywhere!
-		<a href='https://github.com/ncase/کووید-۱۹'>
-			(Swipe our code on Github)
+		معنی‌ایش اینه که شما <em>همین الان</em> اجازه دارید هر بخشی از طرح/کد/کلمات این صفحه رو باز-استفاده یا با تغییرات استفاده کنید - توی وبلاگ‌تون، سایت خبری‌تون، کلاس درس‌تون یا هر جای دیگه.
+		<a href='https://github.com/mehdi-mostafavi/covid-19'>
+			سری به کدمون روی گیت‌هاب هم بزنید.
 		</a>
 		<br>
 		<b>
-			Just remember to credit
-			<a href='https://scholar.google.com/citations?user=_wHMGkUAAAAJ&hl=en'>Marcel Salathé</a>
+			فقط یادتون باشه به
+			<a href='https://scholar.google.com/citations?user=_wHMGkUAAAAJ&hl=en'>مارسل سالثه</a>
 			&
-			<a href='https://ncase.me/'>Nicky Case</a>
-			(May 2020)
+			<a href='https://ncase.me/'>نیکی کیس</a>
+			&
+			<a href='https://mehdi-mostafavi.ir'>سید مهدی مصطفوی گرجی</a>
+			&
+			<a href='https://scholar.google.com/citations?user=jsHuvKEAAAAJ&hl=en'>آرش پوردامغانی</a>
+			به عنوان مترجمان ارجاع بدید.
+			و تشکر از بقیه دوستانی که توی این پروژه کمکمون کردن:
+			رضا ترابی، مرتضی‌علی مهدوی 
+			(اردیبهشت 1399)
 		</b>
 		
 		
 		<br><br>
 
-		This free, open-source guide was made possible thanks to
-		Nicky's supporters on Patreon.
-		If (seriously, ONLY IF) you have some disposible income in these hard times, you can
-		<a href='https://www.patreon.com/ncase'>throw coins at Nicky!</a>
-		If not, you can share this guide or
-		<a href='https://ncase.me/'>see their other educational art/interactives</a>.
-		(excellent for homeshooling if, say, schools are currently closed
-		due to a pandemic)
+		این راهنمای رایگان و منبع-باز با حمایت حامیان نیکی بر روی Patreon ممکن شده.
+		اگه (جدی، فقط اگه) درآمد اضافه‌ای دارید، می‌تونید به
+		<a href='https://www.patreon.com/ncase'>نیکی کمک کنید</a>.
+		اگه در ایران هستید و می‌تونید کمک کنید، از طرف ما به طرح کرونای <a href='https://donation.sosapoverty.org/donate/corona'>جمعیت امام علی</a> کمک کنید.
+		اگه نه، با اشتراک‌گذاری این راهنما یا
+		<a href='https://ncase.me/'> بقیهٔ آموزش‌های تعاملی</a>.
+		( که برای یادگیری در خانه عالین، اگه هنوز مدارس به خاطر همه‌گیر بسته است.) از نویسندگان حمایت کنید.
+
 
 		<br><br>
 
-		Here's some of the generous Patrons who made this possible: 💖
+		در زیر لیست بعضی از حامیان نیکی که باعث نوشته شدن این متن شدن رو می‌تونید ببیند:
 
 		<br><br>
-<!---
+
 		<div id="supporters"> 
 		</div>
---->
+			9_9<br>Aaron Steelman<br>Abdallah AbuHashem<br>Adam Zeiner<br>Aeryn Light<br>Agent Entity<br>Ahti Ahde<br>Aimee Jarboe<br>Akito INOUE<br>Aldebarb <br>alex <br>Alex Kreitzberg<br>Alexander Zacherl<br>Alexis Olson<br>Allison Clift-Jennings<br>Amy Fuchs<br>Amy Traylor<br>Andre Latchman<br>Andrea Chlebikova<br>Andrea Di Biagio<br>Andrew Sachs<br>Andy Ellis<br>Anton Eremin<br>Apollo Slater<br>Aria Minaei<br>Armelle Laine<br>Arvand Barghi<br>Aurimas<br>B Cavello<br>Ben Kraft<br>Benoit Doidic<br>Berk Gedik<br>Brandon Quinn<br>Brendan Nelligan<br>Brian Handy<br>Brian Lange<br>Bruce Steinberg<br>Caelyn McAulay<br>Caio Vinicius do Nascimento<br>Cassandra Xia<br>Catherine J Smith<br>Cathy Deng<br>Cedric Nering<br>Chad Sansing<br>Charlie Stigler<br>Chong Kee Tan<br>Choose A Username<br>Chris Hallacy<br>Chris Makler<br>Chris Ploeg<br>Christine Capra<br>Christopher Ferrie<br>Christopher Walker<br>Clive Freeman<br>Colin Anderson<br>Colin Liotta<br>Connie <br>Corey Girard<br>count <br>Cristy Stone<br>Curtis Frye<br>Cyrus Levy<br>D <br>Da LIberman<br>Dag Frode Solberg<br>Damien Bernard<br>Daniel Shiffman<br>Daniel Teitelbaum<br>Dante <br>Darius Bacon<br>Dave B.<br>Dave Tu<br>David E Weekly<br>David Mora<br>Denis <br>Dominik <br>Duilio Palacios<br>Dylan Field<br>Eldecrok <br>Eric Chisholm<br>Ernst Scholtz<br>Ethan Muller<br>Eugene Eric Kim<br>Evan Rocha<br>Evan Shulman<br>Fanboat <br>Fiona Nielsen<br>Florencia Herra Vega<br>FlyingRat <br>Gabriel Barbosa Nunes<br>Gargi Sharma<br>Gary Coulter<br>Gauthier Muguerza<br>Glen E. Ivey<br>Grävling <br>Green <br>Greg <br>Guy Chapman<br>Harry Brisson<br>HI <br>Hilary Fried<br>Hildegard von Bigass<br>Idahosa Ness<br>ikrima <br>IndustrialRobot <br>Ivar Troost<br>Ivo Murrell<br>J C<br>Jacob Christian Munch-Andersen<br>James <br>James Horton<br>Jan Kölling<br>Jared Cosulich<br>Jason Crawford<br>Jay Mitchell<br>Jay Treat<br>jc <br>Jean-Eudes Denis<br>Jesse Bradley<br>Jing Wang<br>Jingfeng Chen<br>Joe Sevits<br>Jonne Harja<br>Joost Gadellaa<br>Joseph Rocca<br>Josh 'Cheeseness' Bush<br>Josh Koenig<br>Joshua Horowitz<br>Joy Buolamwini<br>k3taminee<br>Kailys <br>Kalu <br>Karen Cooper<br>Kate Fractal<br>Kelly Reed<br>Kelvin Nishikawa<br>Kendra Lockman<br>Kevin Richardson<br>Kevin Simler<br>Kevin Zollman<br>KevinDeLand <br>Kien <br>Kimberly Lammi<br>Kwame Thomison<br>Kyle Buswell<br>Kyle Studstill<br>labratross <br>Landy Manderson<br>Laura <br>Laura Baldwin<br>Laurent COOPER<br>Lee Berman<br>Leopard Dan<br>Liyi Zhang<br>Lucas Garron<br>Lukas Peyer<br>Lydia Choy<br>M <br>Malte <br>Manuel Kueblboeck<br>Marc Cohen<br>Marc Marasco<br>Marguerite Dibble<br>Mark Guzdial<br>marko <br>Mary Bush<br>Mary C.<br>Matt Hughes<br>Matthew Campbell<br>Maura Dawes<br>Maxim Sidorov<br>Mercury Legba<br>Michael Donatz<br>Michael Handler<br>Michael Huff<br>Michael Slade<br>Michal Takáč<br>Mikayla <br>Mikey <br>Mikkel Snyder<br>Naomi Alderman<br>Nat Alison<br>Natalie Rothfels<br>Natalie Sun<br>Nelson Crespo<br>Nguyet Vuong<br>Nigel Kerr<br>Nikhil Harithas<br>Nikita Vasilyev<br>Nimrod Kimhi<br>Noah Richards<br>Orb Li<br>Pablo Molins<br>Patrick Henderson<br>Paul d'Aoust<br>Paul Sztajer<br>Phil Dougherty<br>Philip White<br>Pierre Thierry<br>Pixl Pixl<br>postmillenial <br>Przemek Piotrowski<br>Rachél Bazelais<br>Rae McIntosh<br>Rafael F.Font<br>Ralph Pantozzi<br>raspbeguy <br>Raymond Keller<br>Rebecca Thomas<br>Reed Copperstrand<br>Ridima Ramesh<br>Rob Howard<br>Rob McKaughan<br>Robert Aran<br>Robert Cobb<br>Robert Duncan<br>Rohit Bhat<br>Ruby Moore<br>S Smith<br>saianne <br>Sara Ness<br>Sasha Fenn<br>Scott Reynolds<br>Sean Riley<br>Sergey Dolgov<br>Shreeya Goel<br>Simon <br>Simon Morrow<br>slow.danger<br>Smarter Every Day<br>Sofia Razón<br>Soraya Een Hajji<br>Sorden <br>Srini Kadamati<br>Steve Cha<br>Steve Ryman<br>Steve Waldman<br>Stewart Burrows Brand<br>Stian Soltvedt<br>Stuart <br>Sylvain Francis<br>T <br>Tal Rotbart<br>Tamir Bahar<br>Thais Weiller<br>Thember <br>Tobias Rose-Stockwell<br>toby schachman<br>Todd Siegel<br>Tom Lieber<br>Tommy Maranges<br>Toph Tucker<br>Tyler Coleman<br>Victor Debrus<br>Vlad Dziuba<br>Vladimir <br>Wait But Why<br>Wesley Gardner<br>what's for dinner<br>Will Dayble<br>William B Everett<br>Wouter <br>Yan Naung Oak<br>Yohan Dash<br>Yu-Han Kuo<br>Zach Smith<br>Zan Armstrong<br>Zener <br>zubr kabbi<br>김슬<br>🐸
 		<br><br>
-
-		مرسی از
-
-		<br><br>
-
 		
+و نیکی از افراد زیر هم  که به بررسی محتوا کمک کردن تشکر می‌کنه:
+		Alex Kreitzberg,
+		Amit Patel,
+		EmilyKate McDonough,
+		Emma Hodcroft,
+		Evan Rocha,
+		Gillian Tarr,
+		Grävling,
+		Kayle Sawyer,
+		Michael Huff,
+		Phil Dougherty,
+		Philipp Wacker,
+		Ridima Ramesh,
+		Sofia Razón,
+		Srini Kadamati,
+		Vi Hart
+
+		<br><br>
+
+		اگر اشتباهی در محتوا باقی مانده باشد تقصیر من(نیکی) است و اشتباهات احتمالی ترجمه به عهدهٔ مترجمان.
 
 	</div>
 
