Update index.html up to Game 18

--- a/index.html
+++ b/index.html
@@ -424,13 +424,13 @@
 
 	<p>( در پانویس در مورد سردرگمی‌هایی که بین موارد «واقعا» بدون علامت و انتقال پیش از علائم پیش میاد بحث می‌کنم - خلاصتن موارد «واقعا» بدون علامت نادر هستن:<sup id="fnref28"><a href="#fn28" rel="footnote">28</a></sup>)</p>
 
-	<p>قرنطینه کردن افرادی که <em>علامت‌دار</em> هستن میتونه مقدار R رو تا ۴۰٪ کاهش بده، و اگر مخاطبینی  که باهشون در تماس بودن (چه با علامت پیشین و چه حتی بدون علامت) رو قرنطینه کنیم این مقدار رو ۵۰٪ دیگه کاهش پیدا می‌کنه:<sup id="fnref29"><a href="#fn29" rel="footnote">29</a></sup>:</p>
+	<p>قرنطینه کردن افرادی که <em>علامت‌دار</em> هستن میتونه مقدار R رو تا ۴۰٪ کاهش بده، و اگر مخاطبینی  که باهشون در تماس بودن (چه با علامت پیشین و چه حتی بدون علامت) رو قرنطینه کنیم این مقدار ۵۰٪ دیگه کاهش پیدا می‌کنه:<sup id="fnref29"><a href="#fn29" rel="footnote">29</a></sup>:</p>
 
 	<div class="sim">
 	        <iframe src="sim?stage=int-4a&format=calc" width="285" height="340"></iframe>
 	</div>
 
-	<p>در نتیجه، بدون این که ۱۰۰٪ مخاطبان رو قرنطینه کنیم، می‌تونیم به 1>R برسیم بدون هیچ‌گونه تعطیلی اجباری. این جوری خیلی برای سلامت روان و اقتصادمون بهتره.( برای مردمی که مجبور به خود-قرنطینگی می‌شن، دولت‌ها باید ازشون حمایت کنن - خرج آزمایش‌هاشون رو بدن، از حفظ شغل‌شون اطمینان حاصل کنن، مرخصی با حقوق براشون درنظر بگیرن و موارد مشابه. این جوری هزینه‌ها خیلی کم‌تر‌ از یه تعطیلی سراسری خواهد بود.)</p>
+	<p>در نتیجه، بدون این که ۱۰۰٪ مخاطبان رو قرنطینه کنیم و هیچ‌گونه تعطیلی اجباری اعمال کنیم، می‌تونیم به 1>R برسیم. این جوری خیلی برای سلامت روان و اقتصادمون بهتره.( برای مردمی که مجبور به خود-قرنطینگی می‌شن، دولت‌ها باید ازشون حمایت کنن - خرج آزمایش‌هاشون رو بدن، از حفظ شغل‌شون اطمینان حاصل کنن، مرخصی-با-حقوق براشون درنظر بگیرن و موارد مشابه. این جوری هزینه‌ها خیلی کم‌تر‌ از یه تعطیلی اجباری سراسری خواهد بود.)</p>
 
 	<p>بعدش سعی می‌کنیم 1>R رو نگه داریم تا زمانی که واکسن رو در اختیار داشته باشیم که باعث می‌شه افراد مستعد<span class="nowrap"><icon s></icon></span> تبدیل بشن به افراد ایمن<span class="nowrap"><icon r></icon>.</span> ایمنی جمعی، به روش درست!</p>
 
@@ -445,7 +445,7 @@
 	<ol>
 	<li>چند ماه تعطیلی، تا وقتی که بتونیم…</li>
 	<li>روش مطمئنی برای «آزمایش، ردیابی و قرنطینه» پیدا کنیم، تا وقتی که بتونیم…</li>
-	<li>به مقدار کافی واکسن برای مردم دست پیدا کنیم، که یعنی</li>
+	<li>به مقدار کافی واکسن برای مردم دست پیدا کنیم، که یعنی…</li>
 	<li>ما بردیم.</li>
 	</ol>
 
@@ -453,19 +453,19 @@
 	        <iframe src="sim?stage=int-5&format=lines" width="800" height="540"></iframe>
 	</div>
 
-	<p>راهش اینه. این‌جوری می‌تونیم فرود اضطراری‌مون انجام بدیم.</p>
+	<p>راهش اینه! این‌جوریه که می‌تونیم یه فرود اضطراری‌ انجام بدیم.</p>
 
-	<p>این‌جوری می‌تونیم کووید-۱۹ رو شکست بدیم.</p>
+	<p>این‌جوریه که می‌تونیم کووید-۱۹ رو شکست بدیم.</p>
 
 	<p>…</p>
 
-	<p>ولی اگه هنوز هم چیزها درست پیش نرن؟ وقایع تا این‌جا وحشتناک پیش رفتن. این ترسه، و خوبه! ترس به ما امکان می‌ده تا <em>برنامه‌های جایگزین</em> داشته باشیم.</p>
+	<p>ولی اگه <em>هنوز</em> چیزها درست پیش نرن؟ وقایع تا این‌جا وحشتناک پیش رفتن. این ترسه، و خوبه! ترس به ما امکان می‌ده تا <em>برنامه‌های جایگزین</em> داشته باشیم.</p>
 
 	<p>بدبین چتر نجات رو اختراع می‌کنه.</p>
 
 	<h3 id="toc_5">سناریوی ۴+: ماسک برای همه، تابستان، قطع‌کنندهٔ مدار</h3>
 
-	<p>اگه R<sub>0</sub>از اون مقداری که فکر می‌کردیم بزرگ‌تر باشه، و مداخله‌هایی هم که بهشون اشاره کردیم، حتی فاصله‌گذاری‌ها، هنوز کافی نباشن تا 1>R برسونیم، اون وقت چی؟</p>
+	<p>اگه R<sub>0</sub>از اون مقداری که فکر می‌کردیم بزرگ‌تر باشه، و مداخله‌هایی هم که بهشون اشاره کردیم، حتی فاصله‌گذاری‌ها، هنوز کافی نباشن تا به 1>R برسیم، اون وقت چی؟</p>
 
 	<p>یادمون باشه، حتی اگه به 1>R نرسیم، کاهش R هم‌چنان از اوج گرفتن بیش از حد مجموع موارد جلوگیری می‌کنه، در نتیجه جون انسان‌ها نجات پیدا می‌کنه. اما هنوز ایده‌آل ما اینه که به 1>R برسیم، بنابراین یه سری راه دیگه برای کاهش R رو می‌تونیم مدنظر قرار بدیم.</p>
 
@@ -473,15 +473,15 @@
 
 	<p><em>ممکنه بگین: «من فکر می‌کردم ماسک‌ها جلوی مریض شدن آدم رو نمی‌گیرن.»</em></p>
 
-	<p>درسته. ماسک ها جلوی مریض شدن شما رو نمی‌گیرن ... ولی نمی‌ذارن <em>بقیه</em> توسط شما مریض بشن.<sup id="fnref30"><a href="#fn30" rel="footnote">30</a></sup></p>
+	<p>درسته. ماسک‌ها جلوی مریض شدن شما رو نمی‌گیرن ... ولی نمی‌ذارن <em>بقیه</em> توسط شما مریض بشن.<sup id="fnref30"><a href="#fn30" rel="footnote">30</a></sup></p>
 
 	<p><img src="pics/masks.png" alt=""></p>
 
-	<p>اگه بخوایم کمی صحبت کنیم: استفاده از ماسک‌های جراحی برای <em>افراد مبتلا به سرماخوردگی یا آنفولانزا</em> می‌تونه ویروس‌های موجود در ذرات معلق هوا رو تا ۷۰٪ کاهش بده.<sup id="fnref31"><a href="#fn31" rel="footnote">31</a></sup> کاهش انتقال تا ۷۰ درصد می‌تونه تاثیری مشابه با تعطیلی‌های اجباری داشته باشه.</p>
+	<p>اگه بخوایم با عدد و رقم صحبت کنیم: استفاده از ماسک‌های جراحی برای <em>افراد مبتلا به سرماخوردگی یا آنفولانزا</em> می‌تونه جلوی ویروس‌های موجود در ذرات معلق هوا رو تا ۷۰٪ بگیره.<sup id="fnref31"><a href="#fn31" rel="footnote">31</a></sup> تاثیری مشابه با تعطیلی‌های اجباری!</p>
 
-	<p>با این وجود، ما از تاثیرات ماسک بر روی کووید-۱۹ به صورت خاص مطمئن نیستیم. ما باید یافته‌های علمی رو وقتی منتشر کنیم اگه ۹۵٪ از صحت‌اشون اطمینان داشته باشیم(… باید <sup id="fnref32"><a href="#fn32" rel="footnote">32</a></sup>) فواید استفاده از ماسک‌ها، تا زمان نگارش این متن(۱۲ اردیبهشت ۱۳۹۹)، «اطمینان کم‌تر از ۹۵٪» دارن.</p>
+	<p>با این وجود، ما از تاثیرات ماسک بر روی کووید-۱۹ به صورت خاص مطمئن نیستیم. ما باید یافته‌های علمی رو وقتی منتشر کنیم که ۹۵٪ از صحت‌اشون اطمینان داشته باشیم(… باید <sup id="fnref32"><a href="#fn32" rel="footnote">32</a></sup>) استفاده از ماسک‌ها، تا زمان نگارش این متن(۱۲ اردیبهشت ۱۳۹۹)، «اطمینان کم‌تر از ۹۵٪» دارن.</p>
 
-	<p>با این حال، همه‌گیری‌شناسی مثل بازی پوکره. <strong>وقتی فقط ۹۵٪ اطمینان دارید شرط ببندید، و اون وقت هرچی در چنته دارید رو از دست می‌دید.</strong> مون‌جور که مقالهٔ اخیر مجلهٔ پزشکی بریتانیا اشاره می‌کنه<sup id="fnref33"><a href="#fn33" rel="footnote">33</a></sup> ، در شرایط عدم اطمینان ما <em>باید</em> تحلیل سود/هزینه انجام بدیم</p>
+	<p>با این حال، همه‌گیری‌شناسی مثل بازی پوکره. <strong>وقتی فقط ۹۵٪ اطمینان دارید شرط ببندید، و اون وقت هرچی در چنته دارید رو از دست می‌دید.</strong> همون‌جور که مقالهٔ اخیر مجلهٔ پزشکی بریتانیا اشاره می‌کنه<sup id="fnref33"><a href="#fn33" rel="footnote">33</a></sup> ، در شرایط عدم اطمینان ما <em>باید</em> تحلیل سود/هزینه انجام بدیم:</p>
 
 	<p>هزینه: اگه از ماسک‌های پارچه‌ای خونگی استفاده کنیم‌ (که حدود دو سوم ماسک‌های جراحی موثرن<sup id="fnref34"><a href="#fn34" rel="footnote">34</a></sup>)، خیلی ارزون در میاد. اگر هم بخواهیم از ماسک‌های جراحی استفاده کنیم، یه کم گرون‌تر می‌شه، اما هنوز هم تقریبا ارزون خواهد بود.</p>
 
@@ -493,13 +493,13 @@
 
 	<p>(استدلال ها دیگه له/علیه  ماسک ها:<sup id="fnref35"><a href="#fn35" rel="footnote">35</a></sup>)</p>
 
-	<p>ماسک‌ها <em>به‌تنهایی</em>منجر به 1>R نمی‌شن. بلکه شست‌شوی دست‌ها و «آزمایش، ردیابی و قرنطینه» فقط می‌تونن ما رو به R=1.10 برسونن. اگه یک سوم مردم ماسک بپوشن، به مقدار 1>R می‌رسیم و در نتیجه ویروس مهار خواهد شد.</p>
+	<p>ماسک‌ها <em>به‌تنهایی</em> منجر به 1>R نمی‌شن. بلکه شست‌شوی دست‌ها و «آزمایش، ردیابی و قرنطینه» فقط می‌تونن ما رو به R=1.10 برسونن. اگه یک سوم مردم ماسک بپوشن، به مقدار 1>R می‌رسیم و در نتیجه ویروس مهار خواهد شد.</p>
 
-	<p><strong>تابستان:</strong></p>
+	<p><strong>تابستون:</strong></p>
 
-	<p>قبول، این مداخله‌‌ای نیست که بتونیم کنترلش کنیم، اما کمک می‌کنه. بعضی رسانه‌‌های خبری گزارش می‌دن که تابستون هیچ اثری روی کووید-۱۹ نداره، اما این نصف حقیقتته، تابستون منجر به 1>R نمی‌شه، اما R رو کاهش می‌ده.</p>
+	<p>قبول، این مداخله‌‌ای نیست که بتونیم کنترلش کنیم، اما کمک می‌کنه. بعضی رسانه‌‌های خبری گزارش می‌دن که تابستون هیچ اثری روی کووید-۱۹ نداره، اما این نصف حقیقته، تابستون منجر به 1>R نمی‌شه، اما R رو کاهش می‌ده.</p>
 
-	<p>در مورد کووید-۱۹، هر افزایش ۱ درجه‌ سانتیگرادی دما باعث کاهش ۱.۲٪ مقدار R می‌شه.<sup id="fnref36"><a href="#fn36" rel="footnote">36</a></sup> تفاوت دمای تابستون با زمستون در شهر نیویورک ۲۶ درجه است،<sup id="fnref37"><a href="#fn37" rel="footnote">37</a></sup> در نتیجه تابستون R رو حدود ۳۱٪ کم می‌کنه.</p>
+	<p>در مورد کووید-۱۹، هر افزایش ۱°‌ سانتیگرادی دما باعث کاهش ۱.۲٪ مقدار R می‌شه.<sup id="fnref36"><a href="#fn36" rel="footnote">36</a></sup> تفاوت دمای تابستون با زمستون در شهر نیویورک ۲۶° است،<sup id="fnref37"><a href="#fn37" rel="footnote">37</a></sup> در نتیجه تابستون R رو حدود ۳۱٪ کم می‌کنه.</p>
 
 	<div class="sim">
 	        <iframe src="sim?stage=int-6b&format=calc" width="285" height="220"></iframe>
