--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 
 	<p>این همون چیزیه که <a href="http://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/کووید-۱۹/report-9-impact-of-npis-on-کووید-۱۹/">تحقیق ۱۶ مارس امپریال کالج لندن</a> کشف کرد: هیچ کاری نکنید، اونوقت تخت‌های ICUمون تموم می‌شه و بیش از ۸۰٪ مردم مبتلا به بیماری می‌شن. ( یادمون باشه: مجموع موارد از سطح ایمنی جمعی <em>فراتر</em> می‌ره.)</p>
 
-	<p>حتی اگه ۰.۵٪ درصد افراد مبتلا فوت کنن <sup id="ref15"><a href="#fn15" rel="footnote">15</a></sup>- فرضی سخاوتمندانه وقتی ICU‌ای در کار نیست- در کشورهایی بزرگی مانند ایالات متحده، با ۳۰۰ میلیون جمعیت، ۰.۵٪ از ۸۰٪ ۳۰۰ میلیون = ۱.۲ میلیون فوت کردن… <em>اگه هیچ کاری نکنیم</em>.</em></p>
+	<p>حتی اگه ۰.۵٪ درصد افراد مبتلا فوت کنن <sup id="ref15"><a href="#fn15" rel="footnote">15</a></sup>- فرضی سخاوتمندانه وقتی ICU‌ای در کار نیست- در کشورهایی بزرگی مانند ایالات متحده، با ۳۰۰ میلیون جمعیت، ۰.۵٪ از ۸۰٪ ۳۰۰ میلیون = ۱.۲ میلیون فوت کردن… <em>اگه هیچ کاری نکنیم</em>.</p>
 
 	<p>(خیلی از گزارش‌های خبری و پست‌های شبکه‌های اجتماعی می‌گن «۸۰٪ مبتلا می‌شن» بدون اینکه بگن «اگه هیچ‌ کاری نکنیم». <em>ترس</em> واسطه‌ای برای کلیک گرفتن بیشتر شده، نه <em>ادراک</em>. هعییی)</p>
 
@@ -624,7 +624,7 @@
 
 	<p>3) انجام مداخلات برای داشتن 1>R تا زمانی که به درمانی دست پیدا کنیم که اثرات کووید-۱۹ رو به قدری کاهش بده که مبتلایان نیاز بسیار کمی به مراقبت‌های حیاتی بیمارستانی داشته باشن. ( باید در <em>هر صورت</em> دنبال چنین درمان‌‌هایی باشیم.) کاهش ۱۰ برابری استفاده از بخش مراقبت‌های ویژه معنی ۱۰ برابر شدن ظرفیت‌شون رو هم می‌ده:</p>
 
-	<p><strong>این شبیه‌سازی حالتیه که <em>هیچ</em> ایمنی بلند مدتی وجود نداشه باشه، واکسنی در کار نباشه، و </em>هیچ </em>مداخله‌ای صورت نگیره - فقط ظرفیت رو به مرور افزایش بدیم تا بتونیم به اوج رسیدن‌های بلند مدت رو تاب بیاریم.</strong></p>
+	<p><strong>این شبیه‌سازی حالتیه که <em>هیچ</em> ایمنی بلند مدتی وجود نداشه باشه، واکسنی در کار نباشه، و <em>هیچ </em>مداخله‌ای صورت نگیره - فقط ظرفیت رو به مرور افزایش بدیم تا بتونیم به اوج رسیدن‌های بلند مدت رو تاب بیاریم.</strong></p>
 
 	<div class="sim">
 	        <iframe src="sim?stage=yrs-5&format=lines" width="800" height="540"></iframe>
