Two <em> tag bug

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
 	<p>تخمین زده می‌شه که <em>در ابتدای</em> شیوع کووید-۱۹، به طور <em>میانگین </em> هر چهار روز، ویروس از یک<icon i></icon> به یک<icon s></icon>منتقل می‌شده.<sup id="fnref2"><a href="#fn2" rel="footnote">2</a></sup> (حواس‌تون باشه، آمار خیلی متغیره)</p>
 
-	<p>اگه ما «هر ۴ روز دوبرابر شدن» رو برای جامعه‌‌ای با فقط ۰٫۰۰۱%</em><span class="nowrap"><icon i></icon>,</span> در نظر بگیریم، چه اتفاقی رخ می‌ده؟ </p>
+	<p>اگه ما «هر ۴ روز دوبرابر شدن» رو برای جامعه‌‌ای با فقط ۰٫۰۰۱%<span class="nowrap"><icon i></icon>,</span> در نظر بگیریم، چه اتفاقی رخ می‌ده؟ </p>
 
 	<p><strong>روی &quot;شروع&quot; بزن تا بتونی بازی کنی. راستی می‌تونی بعدش تنظیمات رو عوض کنی و دوباره بازی کنی:</strong> (جزئیات فنی: <sup id="fnref3"><a href="#fn3" rel="footnote">3</a></sup>)</p>
 
@@ -290,7 +290,7 @@
 
 	<p>تقریبا ۱ نفر از هر ۲۰ نفر بیمار مبتلا به کووید-۱۹ نیاز به رفتن به ICU (بخش مراقبت‌های ویژه) پیدا می‌کنه.<sup id="fnref13"><a href="#fn13" rel="footnote">13</a></sup> در کشورهای ثروتمندی مثل ایالات متحدهٔ آمریکا، ۱ تخت ICU به ازای هر ۳۴۰۰ نفر هست.<sup id="fnref14"><a href="#fn14" rel="footnote">14</a></sup>  در نتیجه توی آمریکا می‌شه بیماری ۲۰ نفر از هر ۳۴۰۰ نفر رو به صورت <em>هم‌زمان</em> تحمل کرد - حدود ۰.۶٪ جمعیت.</p>
 
-	<p>حتی اگه ظرفیت مراقبت‌های ویژه رو <em>بیش از سه برابر کنیم و به حدود ۲٪ درصد هم برسونیم</em>، این اتفاقیه که می‌اوفته اگه مطلقاً هیچ کاری انجام ندیم:</em></p>
+	<p>حتی اگه ظرفیت مراقبت‌های ویژه رو <em>بیش از سه برابر کنیم و به حدود ۲٪ درصد هم برسونیم</em>، این اتفاقیه که می‌اوفته اگه مطلقاً هیچ کاری انجام ندیم:</p>
 
 	<div class="sim">
 	        <iframe src="sim?stage=int-1&format=lines" width="800" height="540"></iframe>
