Update index.html to Game 22

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 	<p>راستش رو بخواید، همه‌ٔ ما (مارسل که همه‌گیرشناسه، نیکی که کدر/طراحه، و تیم ترجمه) نگرانیم. احتمال زیاد شما هم مثل ما نگرانید! روش برخورد ما با ترس‌مون یک <strong>شبیه‌سازی بازی‌ناک</strong> بود، تا <em>شما</em> هم بتونید روشی برای برخورد با ترس‌تون در پیش بگیرید که به آگاهی منجر بشه:</p>
 
 	<ul>
-	<li><strong>چند ماه اخیر</strong> (مقدمه‌ای بر همه‌گیری‌شناسی، مدل SEIR و R یا R<sub>0</sub>)</li>
+	<li><strong>چند ماه اخیر</strong> (مقدمه‌ای بر همه‌گیر‌شناسی، مدل SEIR و R یا R<sub>0</sub>)</li>
 	<li><strong>چند ماه پیش‌رو</strong> (تعطیلی اجباری، ردیابی مخاطب، ماسک‌ها)</li>
 	<li><strong>چند سال آینده</strong> ( از بین رفتن  مصونیت؟، واکسنی نیست؟)</li>
 	</ul>
@@ -189,7 +189,7 @@
 
 	<p>این <strong>مدل SIR</strong> هست،<sup id="fnref5"><a href="#fn5" rel="footnote">5</a></sup><br>
 	(مخفف <icon s></icon><strong>S</strong>usceptible <icon i></icon><strong>I</strong>nfectious <icon r></icon><strong>R</strong>ecovered)<br>
-	این <em>دومین</em> اصل  مهمه در «مقدمه‌ای بر همه‌گیری‌شناسی»:</p>
+	این <em>دومین</em> اصل  مهمه در «مقدمه‌ای بر همه‌گیرشناسی»:</p>
 
 	<p><img src="pics/sir.png" alt=""></p>
 
@@ -212,7 +212,7 @@
 
 	<p>تفاوت زیادی ایجاد نشد! مدت زمانی که ما در معرض<icon e></icon> هستیم، فقط نسبت <span class="nowrap"><icon e></icon> به <icon i></icon></span> رو تغییر میده و <em>زمانی که</em> موارد فعال فعلی به قله‌شون می‌رسن… اما هنوز <em>ارتفاع</em> قله و مجموع موارد در انتها ثابت باقی می‌مونه.</p>
 
-	<p>اما چرا؟ به خاطر مهمترین ایده در «مقدمه‌ای بر همه‌گیری‌شناسی»:</p>
+	<p>اما چرا؟ به خاطر مهمترین ایده در «مقدمه‌ای بر همه‌گیرشناسی»:</p>
 
 	<p><img src="pics/r.png" alt=""></p>
 
@@ -481,7 +481,7 @@
 
 	<p>با این وجود، ما از تاثیرات ماسک بر روی کووید-۱۹ به صورت خاص مطمئن نیستیم. ما باید یافته‌های علمی رو وقتی منتشر کنیم که ۹۵٪ از صحت‌اشون اطمینان داشته باشیم(… باید <sup id="fnref32"><a href="#fn32" rel="footnote">32</a></sup>) استفاده از ماسک‌ها، تا زمان نگارش این متن(۱۲ اردیبهشت ۱۳۹۹)، «اطمینان کم‌تر از ۹۵٪» دارن.</p>
 
-	<p>با این حال، همه‌گیری‌شناسی مثل بازی پوکره. <strong>وقتی فقط ۹۵٪ اطمینان دارید شرط ببندید، و اون وقت هرچی در چنته دارید رو از دست می‌دید.</strong> همون‌جور که مقالهٔ اخیر مجلهٔ پزشکی بریتانیا اشاره می‌کنه<sup id="fnref33"><a href="#fn33" rel="footnote">33</a></sup> ، در شرایط عدم اطمینان ما <em>باید</em> تحلیل سود/هزینه انجام بدیم:</p>
+	<p>با این حال، همه‌گیرشناسی مثل بازی پوکره. <strong>وقتی فقط ۹۵٪ اطمینان دارید شرط ببندید، و اون وقت هرچی در چنته دارید رو از دست می‌دید.</strong> همون‌جور که مقالهٔ اخیر مجلهٔ پزشکی بریتانیا اشاره می‌کنه<sup id="fnref33"><a href="#fn33" rel="footnote">33</a></sup> ، در شرایط عدم اطمینان ما <em>باید</em> تحلیل سود/هزینه انجام بدیم:</p>
 
 	<p>هزینه: اگه از ماسک‌های پارچه‌ای خونگی استفاده کنیم‌ (که حدود دو سوم ماسک‌های جراحی موثرن<sup id="fnref34"><a href="#fn34" rel="footnote">34</a></sup>)، خیلی ارزون در میاد. اگر هم بخواهیم از ماسک‌های جراحی استفاده کنیم، یه کم گرون‌تر می‌شه، اما هنوز هم تقریبا ارزون خواهد بود.</p>
 
@@ -525,7 +525,7 @@
 	        <iframe src="sim?stage=int-7&format=lines&height=620" width="800" height="620"></iframe>
 	</div>
 
-	<p>اگه بخوایم از یه سری مداخلات دیگه اسم ببریم که با استفاده از اون‌ها می‌تونیم R رو بیشتر کاهش بدیم:</p>
+	<p>اگه بخوایم از یه سری مداخلات دیگه اسم ببریم که با استفاده از اون‌ها بتونیم R رو بیشتر کاهش بدیم:</p>
 
 	<ul>
 	<li>محدودیت/ قرنطینه‌های مسافرتی</li>
@@ -541,7 +541,7 @@
 
 	<p><strong>حتی در سناریوهای بدبینانه، <em>می‌شه کووید-۱۹ رو شکست داد</em>، در حالی که سلامت مالی و روانی‌مون رو حفظ کنیم.</strong> از تعطیلی‌های اجباری به عنوان یک «دکمهٔ‌ شروع مجدد» استفاده کنیم، مقدار R رو کم‌تر از ۱ نگه داریم با کارهایی مثل قرنطینه + ردیابی مخاطبان با توجه به حریم شخصی + ماسک <em>(حداقل پارچه‌ای)</em> برای همه… و زندگی می‌تونه با حالت شبه-عادی‌ایش برگرده.</p>
 
-	<p>درسته، ممکنه دست‌هامون خشک بشه. ولی بعدش می‌تونیم قرارمون رو به کتاب‌فروشی کمکی دعوت کنیم! می‌تونیم بریم با دوستامون آخرین فیلم‌های پرفروش هالیوود رو ببینیم. می‌تونیم توی کتاب‌خونه‌ها مردم رو ببینیم، خلاصه شادی بودم با مردم و<em> زندگی‌ کردن</em> رو بچشیم.</p>
+	<p>درسته، ممکنه دست‌هامون خشک بشه. ولی بعدش می‌تونیم قرارمون رو به کتاب‌فروشی کمیکی دعوت کنیم! می‌تونیم بریم با دوستامون آخرین فیلم‌های پرفروش هالیوود رو ببینیم. می‌تونیم توی کتاب‌خونه‌ها مردم رو ببینیم، خلاصه شادی بودن با مردم و<em> زندگی‌ کردن</em> رو بچشیم.</p>
 
 	<p>حتی در بدترین حالت‌های ممکن… زندگی ادامه داره.</p>
 
@@ -567,8 +567,8 @@
 
 	<p>اما برای کووید-۱۹ <em>در انسان‌ها</em>، تا ۱۲ اردیبهشت ۱۳۹۹، «چه مدت» هنوز ناشناختهٔ بزرگیه.</p>
 
-	<p>برای شبیه‌سازی‌هامون، بیاید در نظر بگیریم که دورهٔ ایمنی ۱ ساله.
-	<strong>شبیه‌سازی زیر با ۱۰۰٪ <span class="nowrap"><icon r></icon></strong>,</span> شروع می‌شه، که با زوال نمایی بعد از یک سال، <em>به طور میانگین</em> و با سرعت متنوع، تبدیل به مبتلایان مستعد بدون ایمنی <span class="nowrap"><icon s></icon></span> می‌شن:</p>
+	<p>برای شبیه‌سازی‌هامون، بیاید در نظر بگیریم که دورهٔ ایمنی ۱ ساله است.
+	<strong>شبیه‌سازی زیر با ۱۰۰٪ <span class="nowrap"><icon r></icon></strong></span> شروع می‌شه، که با زوال نمایی بعد از یک سال، <em>به طور میانگین</em> ، تبدیل به مبتلایان مستعد بدون ایمنی <span class="nowrap"><icon s></icon></span> می‌شن:</p>
 
 	<div class="sim">
 	        <iframe src="sim?stage=yrs-1&format=lines&height=600" width="800" height="600"></iframe>
@@ -576,7 +576,7 @@
 
 	<p>بازگشت نزول نمایی!</p>
 
-	<p>به این مدل <strong>SEIRS</strong> می‌گن. حرف "S" در این مخفف برای کلمهٔ مستعده(Susceptible)، که بار دیگه ظاهر شده.</p>
+	<p>به این مدل <strong>SEIRS</strong> می‌گن. حرف "S" در این مخفف برای کلمهٔ مستعد (Susceptible) هستش، که یه بار دیگه ظاهر شده.</p>
 
 	<p><img src="pics/seirs.png" alt=""></p>
 
@@ -598,7 +598,7 @@
 
 	<p>اوه.</p>
 
-	<p>برخلاف تصور، تابستون اوج‌های شیوع بیماری رو بدتر و تکرار شونده می‌کنه! دلیلش اینه که تابستون تعداد <span class="nowrap"><icon i></icon></span>های جدید رو کاهش می‌ده، که در نتیجه تعداد <span class="nowrap"><icon r></icon></span>های ایمن هم کاهش پیدا می‌کنه. در نتیجه ایمنی در طول تابستون کاهش پیدا می‌کنه، و قله شیوع در زمستون <em>شکل می‌گیره</em>.</p>
+	<p>برخلاف تصور، تابستون اوج‌های شیوع بیماری رو بدتر و تکرار شونده می‌کنه! دلیلش اینه که تابستون تعداد <span class="nowrap"><icon i></icon></span>های جدید رو کاهش می‌ده، که در نتیجه تعداد <span class="nowrap"><icon r></icon></span>های ایمن هم کاهش پیدا می‌کنه. در نتیجه ایمنی در طول تابستون کاهش پیدا می‌کنه، و قله‌های شیوع در زمستون <em>شکل می‌گیره</em>.</p>
 
 	<p>خوشبختانه، راه حل این موضوع خیلی سر راسته - هر پاییز/زمستون مردم رو واکسینه کنیم:</p>
 
@@ -612,17 +612,17 @@
 
 	<p>چی می‌شه اگه برای <em>سال‌ها</em> واکسن پیدا نشه؟ یا <em>برای همیشه</em>؟</p>
 
-	<p><strong>راستش: احتمالش کمه.</strong> بیشتر همه‌گیرشناس‌ها انتظار دارن در یکی دو سال آینده به واکسن دست پیدا کنیم. آره، برای هیچ کرونا ویروس دیگه‌ای قبلا واکسن نبوده، اما این به خاطره که SARS به سرعت مهار شد، و سرماخوردگی «عادی» هم ارزش سرمایه‌گذاری رو نداشت.</p>
+	<p><strong>راستش: احتمالش کمه.</strong> بیشتر همه‌گیرشناس‌ها انتظار دارن در یکی دو سال آینده به واکسن دست پیدا کنیم. آره، برای هیچ کرونا ویروس دیگه‌ای قبلا واکسن نبوده، اما دلیلش اینه که سارس به سرعت مهار شد، و سرماخوردگی «عادی» هم ارزش سرمایه‌گذاری رو نداشت.</p>
 
-	<p>با این وجود، محققان بیماری‌‌های واگیردار ابراز نگرانی کردن که: اگه نتونیم به اندازه‌ٔ کافی تولید کنیم چی؟<sup id="fnref42"><a href="#fn42" rel="footnote">42</a></sup> اگه عجله کنیم و واکسن ایمنی تولید نکنیم؟<sup id="fnref43"><a href="#fn43" rel="footnote">43</a></sup></p>
+	<p>با این وجود، محققان بیماری‌‌های واگیردار ابراز نگرانی کردن که: اگه نتونیم به اندازه‌ٔ کافی واکسن تولید کنیم چی؟<sup id="fnref42"><a href="#fn42" rel="footnote">42</a></sup> اگه عجله کنیم و واکسن ایمنی تولید نکنیم؟<sup id="fnref43"><a href="#fn43" rel="footnote">43</a></sup></p>
 
-	<p>حتی در سناریوی کابوسناک «بدون واکسن» سه راه خروج داریم. از کم وحشتناک‌ترین‌شون:</p>
+	<p>حتی در سناریوی کابوسناک «بدون واکسن» سه راه خروج داریم.به ترتیب از وحشناک‌ترین‌شون تا کم‌وحشتناک‌ترین‌شون:</p>
 
-	<p>1) مداخلات متناوب و ضعیفی برای رسیدن به 1>R انجام بدیم، تا به تدریج به «ایمنی جمعی طبیعی» برسیم. (اخطار: این روش به کلی مرگ و میر و ریه‌های از بین رفته می‌انجامه. هم‌چنین اگه ایمنی به دست اومده طولانی نباشه کار نمی‌کنه.)</p>
+	<p>1) مداخلات متناوب و ضعیفی برای رسیدن به 1>R انجام بدیم، تا به تدریج به «ایمنی جمعی طبیعی» برسیم. (اخطار: این روش به کلی مرگ و میر و ریه‌های از بین رفته منجر می‌شه. هم‌چنین اگه ایمنی به دست اومده طولانی نباشه به درد نمی‌خوره.)</p>
 
 	<p>2) برای همیشه مداخلات که منجر به 1>R می‌شن رو انجام بدیم. ردیابی مخاطبان و پوشیدن ماسک شاید به اتفاقی طبیعی در دنیای پسا-کووید-۱۹ تبدیل بشه، مثل طبیعی شدن آزمایش‌های بیماری‌های آمیزشی و استفاده از کاندوم در دنیای پسا-اچ‌آی‌وی.</p>
 
-	<p>3) انجام مداخلات برای داشتن 1>R تا زمانی که به درمانی دست پیدا کنیم که اثرات کووید-۱۹ رو به قدری کاهش بده که مبتلایان نیاز بسیار کمی به مراقبت‌های حیاتی بیمارستانی داشته باشن. ( باید در <em>هر صورت</em> دنبال چنین درمان‌‌هایی باشیم.) کاهش ۱۰ برابری استفاده از بخش مراقبت‌های ویژه معنی ۱۰ برابر شدن ظرفیت‌شون رو هم می‌ده:</p>
+	<p>3) انجام مداخلات برای داشتن 1>R تا زمانی که به درمانی دست پیدا کنیم که اثرات کووید-۱۹ رو به قدری کاهش بده که مبتلایان نیاز بسیار کمی به مراقبت‌های حیاتی بیمارستانی داشته باشن. (البته باید در <em>هر صورت</em> دنبال چنین درمان‌‌هایی باشیم!) کاهش ۱۰ برابری استفاده از بخش مراقبت‌های ویژه معنی ۱۰ برابر شدن ظرفیت‌شون رو هم می‌ده:</p>
 
 	<p><strong>این شبیه‌سازی حالتیه که <em>هیچ</em> ایمنی بلند مدتی وجود نداشه باشه، واکسنی در کار نباشه، و </em>هیچ </em>مداخله‌ای صورت نگیره - فقط ظرفیت رو به مرور افزایش بدیم تا بتونیم به اوج رسیدن‌های بلند مدت رو تاب بیاریم.</strong></p>
 
