RTLing and positing Title to right,

--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
 	        <div style="top: 70px;font-size: 75px;font-weight: bold;">
 	            بعدش چی میشه؟
 	        </div>
-	        <div style="font-weight: 500;top: 140px;left: 10px;font-size: 29px;">
+	        <div style="font-weight: 500;top: 140px;right: 10px;font-size: 29px;">
 	           آینده‌های محتمل برای کووید-۱۹، بر اساس شبیه‌سازی‌هایی بازی‌ناک
 	        </div>
-	        <div style="font-weight: 100;top: 189px;left: 10px;font-size: 19px;line-height: 21px;">
+	        <div style="font-weight: 100;top: 189px;right: 10px;font-size: 19px;line-height: 21px;">
 	            <b>
-	                🕐 30 دقیقه
+	                🕐 ۳۰ دقیقه
 	                &nbsp;&middot;&nbsp;
 	            </b>
 	            توسط
