Sharing on top of page translated

--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
 </div>
 
 <div id="sharing">
-	Help this guide
-	get its R &gt; 1:
+	کمک کنید این پست به
+	R &gt; 1
+	برسه:
 	<br>
 	<span id='share_title'>
 		بعدش چی میشه؟
