A minor improvement in title

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 	            </b>
 	            توسط
 	            <a href="https://scholar.google.com/citations?user=_wHMGkUAAAAJ&amp;hl=en">Marcel Salathé</a>
-	            اپیدمولوژیست
+	            همه‌گیرشناس
 	            &
 	            <a href="https://ncase.me/">Nicky Case</a>
 	            طراحی و کد
