Final minor improvements on index.html

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 	<li><strong>چند سال آینده</strong> ( از بین رفتن  مصونیت؟، واکسنی نیست؟)</li>
 	</ul>
 
-	<p>این راهنما (ساخته شده در ۱۲ اردیبهشت ۱۳۹۹، روی این پانویس بزنید!→<sup id="fnref1"><a href="#fn1" rel="footnote">1</a></sup>) به وجود اومده تا به شما ترس <em>و</em> امید بده. ما برای این‌که بتونیم راهی برای شکست کووید-۱۹ پیدا کنیم، که بتونه<strong> سلامت روان و سلامت اقتصادمون</strong> رو هم تامین کنه، به خوش‌بینی نیاز داریم تا برنامه‌ای داشته باشیم، و به بدبینی نیاز داریم تا برنامه‌های پشتیبان داشته باشیم. همان‌جور که گلادیس براونین گفته: «<em>یه خوش‌بین هواپیما رو اختراع کرده و یه بدبین چتر نجات رو</em>».</p>
+	<p>این راهنما (ساخته شده در ۱۲ اردیبهشت ۱۳۹۹، روی این پانویس بزنید!←<sup id="fnref1"><a href="#fn1" rel="footnote">1</a></sup>) به وجود اومده تا به شما ترس <em>و</em> امید بده. ما برای این‌که بتونیم راهی برای شکست کووید-۱۹ پیدا کنیم، که بتونه<strong> سلامت روان و سلامت اقتصادمون</strong> رو هم تامین کنه، به خوش‌بینی نیاز داریم تا برنامه‌ای داشته باشیم، و به بدبینی نیاز داریم تا برنامه‌های پشتیبان داشته باشیم. همان‌جور که گلادیس براونین گفته: «<em>یه خوش‌بین هواپیما رو اختراع کرده و یه بدبین چتر نجات رو</em>».</p>
 
 	<p>خب، کمربندهاتون رو ببندین! داریم میریم تا یه سری تلاطم رو تجربه کنیم!</p>
 
@@ -976,7 +976,7 @@
 
 		<br><br>
 		
-و از افراد زیر هم  که به بررسی محتوا کمک کردن تشکر می‌کنیم:
+و از افراد زیر هم  که در بررسی و تهیه محتوا کمک کردن تشکر می‌کنیم:
 		<br>
 		Alex Kreitzberg,
 		Amit Patel,
@@ -995,6 +995,8 @@
 		Vi Hart,
 		رضا ترابی، 
 		مرتضی‌علی مهدوی 
+		و صابر راستی‌گرد بابت
+		<a href='https://rastikerdar.github.io/vazir-font/'> فونت وزیر</a>.
 		<br><br>
 
 		اگر اشتباهی در محتوا باقی مانده باشد تقصیر من(نیکی) هستش و اشتباهات احتمالی ترجمه به عهدهٔ مترجمان.
@@ -1009,7 +1011,7 @@
 </div>
 
 <div id="wash">
-	مرسی که دستاتونو میشورین (ولی آب رو هدر ندید) 👏
+	دستاتونو رو بشورین! (ولی آب رو هدر ندید.) 👏
 </div>
 
 
