Translation mistake corrected

--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
 
 	<p>و در حقیقت ۴۴ درصد انتقال‌های شبیه این هستند:<strong>انتقال پیش از علائم! </strong><sup id="fnref22"><a href="#fn22" rel="footnote">22</a></sup></p>
 
-	<p>اما، اگه ما افرادی رو که با شخصی که اخیرا مبتلا به بیماری بوده قرنطینه کنیم… ما جلوی گسترش بیماری رو می‌گیرم، با یک قدم جلوتر بودن!</p>
+	<p>اما، اگه ما افرادی رو که با اخیرا با مبتلایی ارتباط نزدیک داشتن رو شناسایی و قرنطینه کنیم… جلوی گسترش بیماری رو می‌گیرم، با یک قدم جلوتر بودن!</p>
 
 	<p><img src="pics/timeline3.png" alt=""></p>
 
