--- a/sim/index.html
+++ b/sim/index.html
@@ -30,14 +30,14 @@
 
 					<div id="label_c_exposed">
 						<input class="sim_checkbox" type="checkbox" id="c_exposed">
-						 <span id="label_p_exposed">N</span> طول میکشه تا <icon e></icon> به <icon i></icon> تبدیل بشه.
+						 <span id="label_p_exposed">N</span> روز طول میکشه تا <icon e></icon> به <icon i></icon> تبدیل بشه.
 						<br>
 						<input class="sim_input" type="range" id="p_exposed" min="1" max="30" step="1" value="3">
 					</div>
 					
 					<div id="label_c_recovery">
 						<input class="sim_checkbox" type="checkbox" id="c_recovery">
-						 <span id="label_p_recovery">N</span> طول میکشه تا <icon i></icon> به <icon r></icon> تبدیل بشه.
+						 <span id="label_p_recovery">N</span> روز طول میکشه تا <icon i></icon> به <icon r></icon> تبدیل بشه.
 						<br>
 						<input class="sim_input" type="range" id="p_recovery" min="1" max="30" step="1" value="10">
 					</div>
