--- a/index.html
+++ b/index.html
@@ -945,7 +945,7 @@
 			و
 			<a href='https://ncase.me/'>نیکی کیس</a>
 			به عنوان نویسندگان و
-			<a href='https://mehdi-mostafavi.ir'>سید مهدی مصطفوی گرجی</a>
+			<a href='https://www.linkedin.com/in/mehdimstv/'>سید مهدی مصطفوی گرجی</a>
 			و
 			<a href='https://scholar.google.com/citations?user=jsHuvKEAAAAJ&hl=en'>آرش پوردامغانی</a>
 			به عنوان مترجمان ارجاع بدید.
