update index.html "" to «» for first paragraph

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 	    </div>
 	</div>
 
-	<p>&quot; تنها چیزی که باید ازش ترسید، خوده ترسه &quot; نصیحتی احمقانه بود.</p>
+	<p>«تنها چیزی که باید ازش ترسید، خوده ترسه» نصیحتی احمقانه بود.</p>
 
 	<p>درسته، دستمال توالت احتکار نکنید- اما اگه سیاستمدارها از خود ترس بترسند، خطرهای واقعی رو کوچیک جلوه می‌دن تا جلوی «هرج و مرج همگانی» رو بگیرن. ترس مشکل نیست، مشکل <em>روش برخوردمون</em> با ترس‌مونه. ترس به ما انرژی می‌ده تا با خطرات فعلی دست و پنجه نرم کنیم و برای خطرات پیش‌رو آماده باشیم.</p>
 
